[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickup-env"
version = "0.1.0"
description = "OpenEnv RL Logistics Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]