[project]
name = "rl-logistics-decision-system"
version = "0.1.0"
description = "OpenEnv logistics environment"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[tool.setuptools]
packages = ["server", "graders"]

[project.scripts]
server = "server.app:app"